#2 Still updating, was running into a bunch of issues but deleted some files because I needed to restart

--- a/AppLearn/AppLearn.csproj
+++ b/AppLearn/AppLearn.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\imgs\**" />
+    <Content Remove="wwwroot\imgs\**" />
+    <EmbeddedResource Remove="wwwroot\imgs\**" />
+    <None Remove="wwwroot\imgs\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="jQuery" Version="3.7.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.13">
